2024-12-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/93a1e75741175b9a2136593064b3714e79a363e2 ) and raygui ( https://github.com/raysan5/raygui/commit/f11dc823d1c938def8f0a823fd5f51979caab94d )

2024-11-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/47f83aa58f7a20110b0dc0d031b377faa50dd31e )

2024-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/59417636ca956d64800e7e26d4f4ec331cf1b412 ) and raygui ( https://github.com/raysan5/raygui/commit/1e03efca48c50c5ea4b4a053d5bf04bad58d3e43 )

2024-09-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/186787e31179eec8280a429fae50b65ef58368d3 ) and raygui ( https://github.com/raysan5/raygui/commit/b5a81fb76eec3521f4cbd6c02ace0dcc7b1cc810 )

2024-09-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/10b01ba7c2139b9203045bb56aa8403ca810cc6b ) and raygui ( https://github.com/raysan5/raygui/commit/6aae83894ac20b7ac8bf511f43d368f0ad409534 )

2024-08-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/418b8780533e6d7822aefcd1a1dd3cb6cca95fa5 )

2024-07-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/e5a1fc4f20f9daca17a2f76ffe217b1128625d0b ) and raygui ( https://github.com/raysan5/raygui/commit/33f16596091e8147d01f948e7125db02cfae5faa )

2024-07-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/5ede47618bd9f9a440af648da1b4817e51644994 ) and raygui ( https://github.com/raysan5/raygui/commit/3fb9d77a67243497e10ae0448374a52a2a65e26f )
