@@ -61,6 +61,7 @@ module Raylib
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES = 6
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEIDS = 7
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEWEIGHTS = 8
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_INSTANCE_TX = 9
   RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION
   RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD
   RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL
